--- a/src/dune
+++ b/src/dune
@@ -1,6 +1,6 @@
 (include_subdirs qualified)
 (coq.theory
  (name ConFrm)
-; (flags -vio)
+ ;(flags -vio src/Noninterference/RefinesSameOracle/SameRetType.v)
  )
 (dirs :standard \ Extraction*)
